scrollbar, some fixes

--- a/client/src/styles/chatRoom.module.scss
+++ b/client/src/styles/chatRoom.module.scss
@@ -4,6 +4,7 @@
     padding: 0px;
     margin: 0px;
     height: 100%;
+    width: 100%;
     background: $neutral;
     display: flex;
     flex-direction: column;
@@ -18,18 +19,80 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
+
         .messages {
             overflow: auto;
             display: flex;
             flex-direction: column;
             margin-top: 1rem;
+            padding-right: 5px;
             gap: 1rem;
             width: 70%;
             width: 100%;
             height: 100%;
+
+            &::-webkit-scrollbar {
+                width: 6px;
+                background: transparent;
+            }
+            &::-webkit-scrollbar-track {
+                background: transparent;
+            }
+            &::-webkit-scrollbar-thumb {
+                border-radius: 50px;
+                background: rgba($color: $dark, $alpha: 0.4);
+            }
         }
     }
     .inputPanel {
+        overflow: hidden;
         height: 3rem;
+        width: auto;
+        padding: 5px;
+        margin: 10px 2rem;
+        display: flex;
+        justify-content: space-between;
+        border-radius: 50px;
+        background: $light;
+        input {
+            border: 0px;
+            border-radius: 50px;
+            outline: none;
+            font-size: 1.3rem;
+            padding: 0px 5px;
+            width: 100%;
+            background: transparent;
+        }
+        button {
+            height: calc(3rem - 12px);
+            width: calc(3rem - 12px);
+            padding: 0px;
+            margin: 0px;
+            border: 0px;
+            border-radius: 100%;
+            background: transparent;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all ease 0.3s;
+            cursor: pointer;
+        }
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .chatRoom {
+        .inputPanel {
+            button {
+                &:hover {
+                    background: $dark;
+                    opacity: 90%;
+                    color: white;
+                    ion-icon {
+                        color: white;
+                    }
+                }
+            }
+        }
     }
 }
