--- a/client/src/styles/loginModal.module.scss
+++ b/client/src/styles/loginModal.module.scss
@@ -4,6 +4,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    // overflow: hidden;
     background-color: $neutral;
     z-index: 1;
     display: flex;
@@ -27,6 +28,7 @@
             gap: 1rem;
             input {
                 height: 3.2rem;
+                max-width: 80vw;
                 background-color: $light;
                 border: 2px $dark solid;
                 border-radius: 8px;
